--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <title>React App</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- multi language -->
-    <script id="locizify" projectid="bcd27890-9fba-49af-bda5-73b18bbb5d02" debug="false" apikey="3942f089-908e-4dae-9bf0-3969fb136490" saveMissing="true" referencelng="ja-JP" fallbacklng="ja-JP" src="https://unpkg.com/locizify@^2.0.0"></script>
+    <!-- <script id="locizify" projectid="bcd27890-9fba-49af-bda5-73b18bbb5d02" debug="false" apikey="3942f089-908e-4dae-9bf0-3969fb136490" saveMissing="true" referencelng="ja-JP" fallbacklng="ja-JP" src="https://unpkg.com/locizify@^2.0.0"></script>
     <script>
       locizer
       .init({
@@ -26,7 +26,7 @@
         const polyglot = new Polyglot({ phrases: translations, locale: lng });
         console.log(polyglot.t('some key'));
       });
-    </script>
+    </script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
